--- a/Employee_Management_MVC/pom.xml
+++ b/Employee_Management_MVC/pom.xml
@@ -44,6 +44,13 @@
 			<version>42.7.1</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>Employee_Management_MVC</finalName>
